// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletsList should render 1`] = `
<DocumentFragment>
  <div
    class="pt-6 px-4 mb-2 mx-2"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top"
                >
                  <div>
                    Wallet
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-36 min-w-36"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Info
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-40 min-w-40"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top flex-row-reverse justify-end flex-row-reverse"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-32 min-w-32"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end flex-row-reverse"
                >
                  <div>
                    Currency
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-32 min-w-32"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden no-border"
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
                >
                  <div
                    class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
                  >
                    <div
                      class="flex items-center justify-center "
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="sc-bdvvtL jjGTFI text-theme-warning-400"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star.svg
                        </svg>
                      </div>
                    </div>
                    <div />
                  </div>
                  <div
                    class="flex-shrink-0 flex items-center space-x-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-18vw8a4-0 itzeiy ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1"
                  >
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td
                data-testid="CurrencyCell"
              >
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-end text-theme-secondary-text"
                >
                  N/A
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
                >
                  <div
                    data-testid="WalletHeader__send-button"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="sc-bdvvtL qGXhc"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
                >
                  <div
                    class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
                  >
                    <div
                      class="flex items-center justify-center "
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="sc-bdvvtL jjGTFI text-theme-warning-400"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star.svg
                        </svg>
                      </div>
                    </div>
                    <div />
                  </div>
                  <div
                    class="flex-shrink-0 flex items-center space-x-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-18vw8a4-0 itzeiy ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1"
                  >
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 2
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__SecondSignature"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          second-signature.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td
                data-testid="CurrencyCell"
              >
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-end text-theme-secondary-text"
                >
                  N/A
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
                >
                  <div
                    data-testid="WalletHeader__send-button"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="sc-bdvvtL qGXhc"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty skeleton block 1`] = `
<DocumentFragment>
  <div
    class="pt-6 px-4 mb-2 mx-2"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top"
                >
                  <div>
                    Wallet
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-36 min-w-36"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Info
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-40 min-w-40"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top flex-row-reverse justify-end flex-row-reverse"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-32 min-w-32"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end flex-row-reverse"
                >
                  <div>
                    Currency
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-32 min-w-32"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden no-border"
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
                >
                  <div
                    class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
                  >
                    <div
                      class="flex items-center justify-center "
                      data-testid="WalletIcon__Starred"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 csrTuU border-transparent ring-theme-background"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 200px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 150px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
                >
                  <div
                    class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
                  >
                    <div
                      class="flex items-center justify-center "
                      data-testid="WalletIcon__Starred"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 csrTuU border-transparent ring-theme-background"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 200px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 150px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
                >
                  <div
                    class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
                  >
                    <div
                      class="flex items-center justify-center "
                      data-testid="WalletIcon__Starred"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 csrTuU border-transparent ring-theme-background"
                    >
                      <span>
                        <span
                          class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                          style="width: 20px; height: 20px;"
                        >
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 200px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 150px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 20px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
